syntax = "proto3";

package timer;

option java_multiple_files = true;
option java_package = "com.chubanova.grpc";
option java_outer_classname = "TimerServiceProto";

import "google/protobuf/timestamp.proto";


service TimerService {
    rpc addTimes (AddTimes) returns (Response);
    rpc startTimer (StartTimer) returns (Response);
    rpc watchStatisticFilter (WatchStatisticFilter) returns (Statistics);

}

message AddTimes {
    int64 time = 1;
    Project project = 2;
}

message Project{
    string name = 1;
    string subProject = 2;
}

message Response {
    string status = 1;
    int64 allTime = 2;
    Project project = 3;
}

message StartTimer {
    enum Timer {
        START = 0;
        STOP = 1;
    }
    Timer starter = 1;
    Project project = 2;
}


message WatchStatisticFilter {
    enum Period {
        ALL_PERIODS = 0;
        YEAR = 1;
        MONTH = 2;
        WEEK = 3;
        DAY = 4;
        PERIOD = 5;
    }

    enum Project {
        ALL_PROJECTS = 0;
        CHOSEN = 1;
    }
    Period period = 1;
    Project projects = 2;

   repeated Project project = 3;

    google.protobuf.Timestamp from = 4;
    google.protobuf.Timestamp to = 5;
}

message Statistics {
    repeated Response response = 1;
}